--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 
 <p>This is the testpage for the console-bookmarklet. You can produce some output either once or multiple times. To stop the repeating output reload the page.</p>
 
+          <h3>Installation</h3>
+          Just save the link below. If you are on a mobile device like iPhone follow these instructions: <a href="http://christian.sterzl.info/#blog/how-to-install-bookmarklets-in-ios">How to install Bookmarklets in iOS Safari</a>
         </section>
         <section>
         <input type="button" name="consoleoutput" value="consoleoutput" onclick="sampleoutput()">
         <input type="button" name="repeatingoutput" value="repeatingoutput" onclick="repeatingLog()"> 
-        <a href="javascript:var s=document.createElement('script');s.type='text/javascript',s.src='console.js',document.getElementsByTagName('head')[0].appendChild(s);">Open console</a>
+        <a href="javascript:var s=document.createElement('script');s.type='text/javascript',s.src='http://waxolunist.github.io/console-bookmarklet/lib/console.js',document.getElementsByTagName('head')[0].appendChild(s);">Open console</a>
         </section>
         <footer>
           Console-bookmarklet is maintained by <a href="https://github.com/Waxolunist">Waxolunist</a><br>
